# AI-SHA-Production

./: .env.example  .gitattributes  .gitignore  LICENSE  MERGE_NOTES.md  NOTICE  README.md  build_ros.sh  constraints-jetson.txt
aisha_brain/: requirements.txt  setup.cfg  setup.py
aisha_brain/aisha_brain/: action_node.py  admin_node.py  brain_node.py  build_knowledge.py  gpu_arbiter.py  stt_node.py  tts_node.py  wa_listener.js  waypoint_resolver_node.py  whatsapp_listener.py
aisha_brain/aisha_raw_data/: admissions.md  cie_ap_exams_2026.md  exam_schedule.md  school_facts.md  tuition-fees.md
aisha_brain/config/: jetson_orin_nano.yaml
aisha_brain/docs/adr/: 0001-gpu-multiplexing-navigating-conversing.md
aisha_brain/launch/: jetson_launch.py  rpi_launch.py
aisha_brain/scripts/: simulate_campus.py
aisha_brain/test/: test_brain_node.py  test_tts_node.py
config/: fastdds_env.sh  fastdds_jetson.xml  fastdds_rpi.xml  fastdds_rpi4.xml  fastdds_ws.xml
docs/: JETSON_INTEGRATION.md  TTS_TROUBLESHOOTING.md  generate_farm_brain_pdf.py
docs/skills/: FACE_AUTH.md  VIDEO_MESSAGE.md
firmware/: mecanum_motor_control.ino  pi_encoder_node_4.py
legacy/Display_pi4/: robot_display.py  start_robot_display.sh
legacy/Ros_2_nodes/: display_node.py  imu_node.py  sensor_fusion_node.py  speaker_node.py  vision_pipeline_node.py
llm_node/: README.md  package.xml  setup.py
llm_node/launch/: llm_sabis.launch.py
llm_node/llm_node/: llm_node.py  llm_node_gemini.py
llm_node/prompts/: sabis_robot_concise.txt  sabis_robot_system.txt
plant_disease_training/: build_tensorrt.py  evaluate.py  export_onnx.py  model.py  patch_yolov8_node.py  prepare_dataset.py  requirements.txt  test_inference.py  train.py
robot_brain/: README.md  package.xml  setup.cfg  setup.py
robot_brain/robot_brain/: robot_brain.py
robot_bringup/: package.xml
robot_bringup/config/: slam.rviz  slam_toolbox_simple.yaml
robot_bringup/launch/: cerebro_aisha.launch.py  slam.launch.py
robot_description/: package.xml
robot_description/urdf/: robot.urdf
scripts/: fetch_mediapipe_task_models.sh  generate_fastdds_configs.sh  launch_stt.sh  launch_tts.sh  start_robot.sh  test_audio_levels.py  test_jetson_integration.sh  test_motor.py
src/aisha_brain/: package.xml  requirements.txt  setup.py
src/aisha_brain/aisha_brain/: action_node.py  admin_node.py  brain_node.py  build_knowledge.py  gpu_arbiter.py  stt_node.py  tts_node.py  waypoint_resolver_node.py  whatsapp_listener.py
src/aisha_brain/aisha_raw_data/: campus-facilities.md  campus-map.md  cie_ap_exams_2026.md  homepage.md  sabis_system.md  school_calendar.md  school_facts.md
src/aisha_brain/config/: LD19_2D.json  fastdds_jetson.xml  fastdds_rpi.xml  fastdds_ws.xml  jetson_orin_nano.yaml  nav_locations.json
src/aisha_brain/launch/: jetson_launch.py  rpi_launch.py  ws_launch.py
src/aisha_brain/scripts/: gpu_release_probe.py
src/aisha_brain/test/: conftest.py  test_action_node.py  test_brain_node.py  test_build_knowledge.py
src/aisha_integration/: package.xml  setup.cfg  setup.py
src/aisha_integration/launch/: jetson_launch.py  rpi_launch.py  ws_launch.py
src/bmp180_pressure/: package.xml  setup.cfg  setup.py
src/bmp180_pressure/bmp180_pressure/: bmp180_node.py
src/bmp180_pressure/launch/: bmp180.launch.py
src/bno055_imu/: CMakeLists.txt  README.md  package.xml  setup.py
src/bno055_imu/bno055_imu/: __init__.py  bno055_node.py  imu_bridge.py  imu_pose_publisher.py
src/bno055_imu/config/: imu_viz.rviz  imu_viz_fixed.rviz
src/bno055_imu/launch/: imu_all.launch.py  imu_complete.launch.py  imu_rviz.launch.py
src/bno055_imu/msg/: BNO055Data.msg
src/gps_gt_u7/: package.xml  setup.cfg  setup.py
src/gps_gt_u7/config/: gps_gt_u7.yaml
src/gps_gt_u7/gps_gt_u7/: gps_node.py
src/gps_gt_u7/launch/: gps_gt_u7.launch.py
src/ldlidar_stl_ros2/launch/: ld19.launch.py
src/llm_display/: README.md  install_display.sh  package.xml  setup.cfg  setup.py  test_display.sh
src/llm_display/config/: display_config.yaml
src/llm_display/launch/: display.launch.py
src/llm_display/llm_display/: dashboard_display.py  display_node.py  robot_display_right_eye.py  robot_face_display.py
src/llm_node/llm_node/: tts_node.py
src/mecanum_driver/: README.md  package.xml  setup.cfg  setup.py
src/mecanum_driver/arduino/mecanum_driver/: mecanum_driver.ino
src/mecanum_driver/arduino/mecanum_motor_control/: mecanum_motor_control.ino
src/mecanum_driver/config/: mecanum_params.yaml
src/mecanum_driver/launch/: mecanum.launch.py  mecanum_driver.launch.py
src/mecanum_driver/mecanum_driver/: mecanum_driver_node.py  motor_direct.py  motor_test.py
src/mecanum_driver/scripts/: arduino_mega.rules
src/motor_control/: package.xml  setup.py
src/motor_control/motor_control/: encoder_node.py  motor_node.py
src/rain_sensor/: package.xml  setup.cfg  setup.py
src/rain_sensor/launch/: rain_sensor.launch.py
src/rain_sensor/rain_sensor/: rain_sensor_node.py
src/robot_brain/: package.xml  setup.py
src/robot_bringup/: setup.py
src/robot_description/: CMakeLists.txt
src/robot_display/: ament_prefix_path.dsv  local_setup.dsv  package.xml  setup.cfg  setup.py
src/soil_moisture/: package.xml  setup.cfg  setup.py
src/soil_moisture/arduino/soil_moisture/: soil_moisture.ino
src/soil_moisture/launch/: soil_moisture.launch.py
src/soil_moisture/soil_moisture/: soil_moisture_node.py
src/speaker_monitor/: package.xml  setup.cfg  setup.py
src/stt_node/: README.md  package.xml  requirements.txt  setup.py
src/stt_node/launch/: stt.launch.py
src/stt_node/stt_node/: stt_node.py
src/tts_elevenlabs/: package.xml  setup.cfg  setup.py
src/yolov8_ros/: package.xml  setup.py
stt_node/: package.xml  setup.py
stt_node/stt_node/: stt_assemblyai.py  stt_node.py  stt_node_api.py
tools/: lambdacli.py  motor_cli.py
tools/face_auth/: auth_gate.py  face_auth.py  fetch_face_models.sh  liveness_diag.py  yaw_diag.py
tools/video_messenger/: deliver.py  video_message.py
yolov8_ros/: setup.py
yolov8_ros/yolov8_ros/: plant_disease_engine.py
(+25 files in other folders)
