<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>Robot bringup package</description>
  <maintainer email="orin-robot@todo.todo">orin-robot</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ldlidar_stl_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
