<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soil_moisture</name>
  <version>1.0.0</version>
  <description>ROS 2 driver for soil moisture sensor via Arduino (MH-sensor-series)</description>
  <maintainer email="pi5@todo.todo">pi5</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
