<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stt_node</name>
  <version>1.0.0</version>
  <description>DEPRECATED legacy Faster-Whisper STT node. Canonical STT is aisha_brain.stt_node (used by the aisha_integration launches); this package is retained only for robot_bringup/cerebro_aisha.launch.py. See MERGE_NOTES.md.</description>
  <maintainer email="robot@jetson.local">orin-robot</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
